--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<p><a href="shah.hml">Шахова дошка</a>
+	<p><a href="shah.html">Шахова дошка</a>
 	<p><a href="flex.html">Флекс</a>
 	<p><a href="med.html">Медіа запити</a>
 </body>
