--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<p><a href="shah.html">Шахова дошка</a>
 	<p><a href="flex.html">Флекс</a>
+	<p><a href="flee.html">Флекс + медіа запити</a>
 	<p><a href="med.html">Медіа запити</a>
 </body>
 </html>
