--- a/111.html
+++ b/111.html
@@ -6,18 +6,19 @@
 <style type="text/css">
 div{
 	border: 3px pink solid;
+  overflow: hidden;
 }
 @media (max-width: 500px) {
 	.box{
 			display: grid;
-			grid-template-columns: 50% 50%;
+			grid-template-columns: 1fr;
 			grid-auto-rows: minmax(180px, auto);
 			grid-column-gap: 0px;
 		}
 	.box_2{
 			display: flex;
 		    background-color: #C71585;
-		    grid-column: 1/3;
+		    grid-column: 1/2;
 		    grid-row: 1/2;
 		    padding: 5px;
 		    justify-content: center;
@@ -26,7 +27,7 @@ div{
  	.box_3{
  			display: flex;
 		    background-color: pink;
-		    grid-column: 1/3;
+		    grid-column: 1/2;
 		    grid-row: 2/3;
 			padding: 5px;
 		    justify-content: center;
@@ -34,7 +35,7 @@ div{
  		 }
  	.box_1{
     	
-     		grid-column: 1/3;
+     		grid-column: 1/2;
  			grid-row: 3/4;
 		}
 	.box_5{
@@ -42,21 +43,21 @@ div{
 			justify-content: center;
 			align-items: center;
     
-     		grid-column: 1/3;
+     		grid-column: 1/2;
  			grid-row: 4/5;
 		}
 	.box_6{
 			background-color: lime;
-		    grid-column: 1/3;
+		    grid-column: 1/2;
 		    grid-row: 6/7;
 		}
 	.box_7{
 			background-color: deeppink;
-		    grid-column: 1/3;
+		    grid-column: 1/2;
 		    grid-row: 7/8;
 		}
 	.box_4{
-		    grid-column: 1/3;
+		    grid-column: 1/2;
 		    grid-row: 5/6;
 	}
 	.btton{
