--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<p><a href="flee.html">Флекс + медіа запити</a>
 	<p><a href="med.html">Медіа запити</a>
 	<p><a href="111.html">Grid</a>
+	<p><a href="12.html">Boot</a>	
 </body>
 </html>
