--- a/12.html
+++ b/12.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title > </title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	 <meta  name = " viewport "  content = " ширина = ширина пристрою, initial-scale = 1 ">
+  <title></title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body >
-<div  class = " container " >
-<div  class = " row " >
-<div  class = " col-xs-12 col-sm-4 col-md-3 col-lg-3 "  style = "background-color:#FFC640;" >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum </div>
-<div  class = " col-xs-12 col-sm-4 col-md-6 col-lg-5"  style = " background-color:#4671D5;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div >
-<div  class = " col-xs-12 col-sm-4 col-md-3 col-lg-4 "  style = " background-color:#33CCCC; " >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div >
-</div >
-</div >	
-</div >
-</body >
-</html >
+<body>
+<h1 align="center">Bootstrap</h1>
+<div class="container">
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3 col-lg-3" style="background-color : MediumBlue;"> За ідеологією Bootstrap сторінка по ширині розділена на 12 колонок. Кожен елемент займає декілька або усі колонки. При перегляді сторінки на різних пристроях можна задавати кількість колонок, які буде займати елемент. Для цього до елементу потрібно застосувати декілька класів - для кожного пристрою:
+- col-тип-кількість - клас для створення елементу, що буде займати на певному типі пристрою задану кількість колонок.</div>
+<div class="col-xs-12 col-sm-4 col-md-6 col-lg-5" style="background-color: DarkTurquoise;"> За ідеологією Bootstrap сторінка по ширині розділена на 12 колонок. Кожен елемент займає декілька або усі колонки. При перегляді сторінки на різних пристроях можна задавати кількість колонок, які буде займати елемент. Для цього до елементу потрібно застосувати декілька класів - для кожного пристрою:
+- col-тип-кількість - клас для створення елементу, що буде займати на певному типі пристрою задану кількість колонок.</div>
+<div class="col-xs-12 col-sm-4 col-md-3 col-lg-4" style="background-color: DarkSlateGrey;"> За ідеологією Bootstrap сторінка по ширині розділена на 12 колонок. Кожен елемент займає декілька або усі колонки. При перегляді сторінки на різних пристроях можна задавати кількість колонок, які буде займати елемент. Для цього до елементу потрібно застосувати декілька класів - для кожного пристрою:
+- col-тип-кількість - клас для створення елементу, що буде займати на певному типі пристрою задану кількість колонок.</div>
+</div>
+</div>  
+</div>
+</body>
+</html>
