--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<p><a href="flee.html">Флекс + медіа запити</a>
 	<p><a href="med.html">Медіа запити</a>
 	<p><a href="111.html">Grid</a>
-	<p><a href="12.html">Boot</a>	
+	<p><a href="12.html">Boot</a>
+	<p><a href="4234.html">Script</a>
+	<p><a href="121212.html">Script 2</a>
+	
 </body>
 </html>
